desenvolvimento header/section1

--- a/styles/ultility/colors.css
+++ b/styles/ultility/colors.css
@@ -1,7 +1,7 @@
 :root {
   --cor-0: #ffffff;
-  --cor-1: #eee4e2;
-  --cor-2: #ded4d2;
+  --cor-1: #fffcfc;
+  --cor-2: #eee4e2;
   --cor-3: #c1b7b5;
   --cor-4: #9a908e;
   --cor-5: #766c6a;
