--- a/styles/header/header.css
+++ b/styles/header/header.css
@@ -1,5 +1,5 @@
 .container {
-  background: rgba(75, 172, 46, 0.6);
+  /* background: rgba(75, 172, 46, 0.6); */
   position: relative;
   height: 100vh;
   height: 100svh;
@@ -9,15 +9,22 @@
   flex-direction: column;
   flex-wrap: wrap;
 }
+
+.header-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 12%;
+  background: var(--cor-1);
+}
+
 .header {
   display: flex;
-  width: 90%;
-  height: 12%;
-  /* margin: 0px 10vh; */
   flex-wrap: wrap;
   align-items: center;
+  width: 100%;
   justify-content: space-between;
-  background: rgba(46, 168, 172, 0.6);
+  margin: 0px 5%;
 }
 
 .logo img {
@@ -28,10 +35,4 @@
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
-}
-
-.section {
-  width: 90%;
-  background: red;
-  height: 88%;
 }
